# airodor-wifi-api

./: .gitignore  README.md  prek.toml  pyproject.toml
.github/workflows/: ci.yml
src/airodor_wifi_api/: airodor.py  main.py
tests/: test_airodor_wifi_api.py
