[project]
name = "airodor-wifi-api"
version = "0.1.0"
description = "API for the Airodor WiFi module from Limot"
readme = "README.md"
license = "MIT"
authors = [{ name = "BenniWi", email = "benjamin.wilking@gmail.com" }]
requires-python = ">=3.12"
dependencies = [
    "requests>=2.28.2",
    "yarl>=1.8.2",
]

[project.urls]
Homepage = "https://github.com/BenniWi/airodor-wifi-api"
Issues = "https://github.com/BenniWi/airodor-wifi-api/issues"

[project.scripts]
awapi = "airodor_wifi_api.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=6.0",
    "ruff>=0.11",
    "ty>=0.0.1a7",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
